2008-07-30  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/audioconvert/Makefile.am:
	  Dist recently-added gstfastrandom.h.

2008-07-30  Edward Hervey  <edward.hervey@collabora.co.uk>

	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_get_xv_support):
	Fix a "may be used uninitialized in this function" which weirdly only
	appears on macosx (?).

2008-07-30  Stefan Kost  <ensonic@users.sf.net>

	* gst-libs/gst/riff/riff-ids.h:
	  Adding acid chunk for tempo and loop information.

2008-07-29  Stefan Kost  <ensonic@users.sf.net>

	* sys/xvimage/Makefile.am:
	  floor() needs linking to $(LIBM).

2008-07-29  Stefan Kost  <ensonic@users.sf.net>

	* ext/gnomevfs/gstgnomevfssrc.c:
	  Aggregate short reads and add some comments and debug logging.
	  Fixes #537380

2008-07-29  Stefan Kost  <ensonic@users.sf.net>

	* gst/playback/gstplaybasebin.c:
	  Fix property doc markup (its not a signal).

	* sys/xvimage/xvimagesink.c:
	  Add since tag for new proeprties (also add sice tags fro the last two
	  other additions).

2008-07-29  Stefan Kost  <ensonic@users.sf.net>

	* sys/xvimage/xvimagesink.c:
	* sys/xvimage/xvimagesink.h:
	  Add autofill/colorkey properties. Fixes #538656.

2008-07-28  David Schleef  <ds@schleef.org>

	* sys/xvimage/xvimagesink.c:
	  Fix rounding errors when converting colorbalance values
	  between hardware and object property ranges.  Partial
	  fix for #537889, however, there still seems to be a small
	  drift problem that could be totem's fault.

2008-07-28  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/ogg/gstoggdemux.c: (gst_ogg_demux_chain_peer),
	(gst_ogg_demux_perform_seek), (gst_ogg_demux_handle_page):
	Don't use GST_CLOCK_TIME_NONE as start of NEWSEGMENT events.
	This fixes a critical warning.

2008-07-28  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/ogg/gstoggmux.c:
	Allow muxing of CELT into Ogg streams.

2008-07-28  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
