@@ -1,3 +1,4 @@
 stress-playbin
 stress-xoverlay
 test-textoverlay
+test-scale
