@@ -25,4 +25,8 @@ stress_playbin_SOURCES = stress-playbin.c
 stress_playbin_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS)
 stress_playbin_LDFLAGS = $(GST_LIBS) $(LIBM)
 
-noinst_PROGRAMS = $(X_TESTS) $(PANGO_TESTS) stress-playbin
+test_scale_SOURCES = test-scale.c
+test_scale_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS)
+test_scale_LDFLAGS = $(GST_LIBS) $(LIBM)
+
+noinst_PROGRAMS = $(X_TESTS) $(PANGO_TESTS) stress-playbin test-scale
